more work on battlefield